--- a/src/partials/PORTAL/p_header.html
+++ b/src/partials/PORTAL/p_header.html
@@ -92,10 +92,30 @@
             ><i class="fa-regular fa-circle-question"></i
           ></a>
         </div>
-        <div class="as__nav_item">
+
+        <!-- <div class="as__nav_item">
           <a class="as__nav_item_link" title="INICIO" href="certificados.html"
             ><i class="fa-solid fa-gear-complex"></i
           ></a>
+        </div> -->
+        <div class="as__nav_item dropdown dropdown-end">
+          <img
+            class="avat"
+            src="http://i.pravatar.cc/300"
+            alt="Usuario"
+            tabindex="0"
+            role="button"
+          />
+          <ul class="dropdown-content" tabindex="0">
+            <li>
+              <a href="#">Configuración <i class="fa-solid fa-gear"></i></a>
+            </li>
+            <li>
+              <a href="#"
+                >Cerrar sesión <i class="fa-solid fa-right-from-bracket"></i
+              ></a>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
