--- a/src/css/portal.css
+++ b/src/css/portal.css
@@ -518,7 +518,7 @@ body {
 }
 
 .pa_login {
-  @apply w-screen min-h-screen flex md:flex-row flex-col bg-gradient-to-b from-[#F8FCFE] to-[#EEF7FB];
+  @apply w-screen min-h-screen flex md:flex-row flex-col bg-gradient-to-b from-alpha-18 to-[#EEF7FB];
   .pa_login_screen {
     @apply md:top-0 md:left-0 md:self-start md:sticky bg-p-login py-16 px-2 bg-cover md:bg-cover bg-center flex flex-col md:min-h-screen items-center justify-center w-full md:w-1/2;
     h1 {
@@ -711,24 +711,6 @@ body {
           }
           ul {
             @apply grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 w-full;
-            .service_link {
-              @apply flex flex-col gap-2.5 rounded-3xl bg-gradient-to-b from-[#EFF8FC]    via-transparent via-20% to-transparent text-azul-dark p-3 border border-[#E3F2F8];
-              h3 {
-                @apply flex items-center gap-2 font-je text-azul-dark text-lg font-normal leading-tight;
-                i {
-                  @apply flex h-8 w-8 items-center justify-center rounded-full bg-alpha-20 text-xl text-azul-bright2;
-                }
-              }
-              img {
-                @apply w-full;
-              }
-              p {
-                @apply text-sm text-azul-dark font-light leading-none;
-              }
-              .as__button {
-                @apply mt-auto ml-auto;
-              }
-            }
           }
         }
       }
@@ -802,7 +784,7 @@ body {
   }
 }
 .as__articulos {
-  @apply bg-gradient-to-b from-[#EFF8FC] to-[#F8FCFE] py-12;
+  @apply bg-gradient-to-b from-[#EFF8FC] to-alpha-18 py-12;
 }
 .pa__inner_articulos {
   @apply flex flex-col gap-8;
@@ -831,7 +813,7 @@ body {
 }
 
 .as__ayuda {
-  @apply bg-gradient-to-b from-[#F8FCFE] to-[#EAF3FA]  grid grid-cols-1 grid-rows-1 pt-8;
+  @apply bg-gradient-to-b from-alpha-18 to-alpha-19  grid grid-cols-1 grid-rows-1 pt-8;
   .as__section_wrapper {
     @apply col-start-1 row-span-1 row-start-1 py-24 z-10 relative;
     .pa__ayuda {
@@ -870,5 +852,150 @@ body {
   }
   svg {
     @apply z-0 col-start-1 row-span-1 row-start-1 object-contain self-end md:object-cover w-full h-full;
+  }
+}
+
+.pa__header {
+  @apply bg-gradient-to-b from-white to-alpha-15 pt-20 pb-4;
+  .pa__header_top {
+    @apply flex flex-col md:flex-row items-center justify-between gap-4;
+    img {
+      @apply max-w-xs;
+    }
+    div.pa__header_int {
+      @apply flex flex-col gap-3;
+      div {
+        @apply flex flex-col gap-3;
+        i {
+          @apply flex h-16 w-16 items-center justify-center rounded-full border-azul-bright2 border-2 bg-alpha-10 text-3xl text-azul-bright2;
+        }
+        h2 {
+          @apply text-azul-bold text-5xl font-normal font-je leading-tight;
+        }
+      }
+      p {
+        @apply text-azul-dark text-xl leading-tight;
+      }
+    }
+  }
+  &.small {
+    img {
+      @apply max-w-[200px];
+    }
+    div.pa__header_int {
+      @apply gap-2;
+      div {
+        @apply flex-row items-start;
+        i {
+          @apply h-12 w-12 text-2xl;
+        }
+        h2 {
+          @apply text-4xl mt-2;
+        }
+      }
+    }
+  }
+  &.inl {
+    div.pa__header_int {
+      div {
+        @apply flex-row items-start;
+      }
+      p {
+        @apply ml-20;
+      }
+    }
+  }
+  &.nimg {
+    img {
+      @apply hidden;
+    }
+  }
+}
+.pa__options {
+  @apply bg-alpha-15 py-4;
+}
+
+.pa__option {
+  ul {
+    @apply grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-4 w-full;
+    .service_link {
+      @apply bg-alpha-20 border border-azul-bright2 transition-colors ease-in-out;
+      h3 {
+        @apply bg-transparent;
+      }
+      &.active {
+        @apply bg-white border-alpha-30;
+        .as__button {
+          @apply hidden;
+        }
+      }
+      &:has(.as__button:hover) {
+        background-color: #f8fcfe;
+      }
+    }
+  }
+}
+
+.service_link {
+  @apply flex flex-col gap-2.5 rounded-3xl bg-gradient-to-b from-alpha-19    via-transparent via-20% to-transparent text-azul-dark p-3 border border-[#E3F2F8];
+  h3 {
+    @apply flex items-center gap-2 font-je text-azul-dark text-lg font-normal leading-tight;
+    i {
+      @apply flex h-8 w-8 items-center justify-center rounded-full bg-alpha-20 text-xl text-azul-bright2;
+    }
+  }
+  img {
+    @apply w-full;
+  }
+  p {
+    @apply text-sm text-azul-dark font-light leading-none;
+  }
+  .as__button {
+    @apply mt-auto ml-auto;
+  }
+}
+
+.pa__inter {
+  @apply bg-gradient-to-b from-alpha-15 to-alpha-18 pt-4 pb-4;
+  .pa__inter_content {
+    @apply bg-white border border-alpha-15 rounded-3xl px-8 py-8 text-azul-dark transition-colors ease-in-out duration-300;
+    &:focus-within {
+      @apply border-azul-bright2 bg-alpha-10;
+    }
+  }
+}
+.alert {
+  @apply bg-alpha-18;
+}
+
+.pa__forms {
+  form {
+    @apply flex flex-col gap-0;
+    &.pa__hlf {
+      @apply md:w-1/2;
+    }
+    table {
+      @apply w-full;
+      tr {
+        td.form-control {
+          @apply relative mb-2.5;
+          label {
+            @apply text-azul-bold text-sm;
+          }
+          .input {
+            @apply border-slate-400;
+          }
+          i {
+            @apply absolute bottom-4 right-4 text-azul-dark;
+          }
+          button.btn {
+          }
+        }
+      }
+    }
+
+    .form-action {
+      @apply mt-4 text-base text-azul-norm underline underline-offset-2 hover:text-azul-norm;
+    }
   }
 }
