Update header logo link and add new page for PQRS initiation

--- a/src/partials/PORTAL/p_header.html
+++ b/src/partials/PORTAL/p_header.html
@@ -1,7 +1,7 @@
 <header id="as__header" class="as__header {{top}}">
   <nav>
     <div class="as__nav_wrap h_menu">
-      <a class="as__logo" title="ASULADO" href="/"
+      <a class="as__logo" title="ASULADO" href="/PORTAL"
         ><img
           alt="asulado"
           loading="lazy"
