--- a/src/css/portal.css
+++ b/src/css/portal.css
@@ -815,36 +815,42 @@ body {
 .as__ayuda {
   @apply bg-gradient-to-b from-alpha-18 to-alpha-19  grid grid-cols-1 grid-rows-1 pt-8;
   .as__section_wrapper {
-    @apply col-start-1 row-span-1 row-start-1 py-24 z-10 relative;
+    @apply col-start-1 row-span-1 row-start-1 py-8 lg:py-24 z-10 relative;
     .pa__ayuda {
       @apply flex flex-col gap-8;
       h2 {
         @apply w-full text-4xl font-je text-azul-bright2 text-center;
       }
-      .pa__ayuda_items {
-        @apply flex flex-col lg:flex-row gap-x-4 gap-y-8 xl:w-10/12 mx-auto items-start justify-between;
+      ul.pa__ayuda_items {
+        @apply w-full grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-x-4 gap-y-8 2xl:w-10/12 mx-auto items-start justify-between;
         li {
-          @apply lg:w-auto w-full flex flex-col items-center justify-center gap-3 flex-1;
+          @apply lg:w-auto w-full flex flex-col items-center justify-center gap-3;
           i.ayu-ico {
-            @apply flex h-28 w-28 items-center justify-center rounded-full border-azul-bright2 border-2 bg-alpha-20 text-5xl text-azul-bright2;
+            @apply flex h-20 w-20 md:h-28 md:w-28 items-center justify-center rounded-full border-azul-bright2 border-2 bg-alpha-20 text-3xl md:text-5xl text-azul-bright2;
           }
           p {
-            @apply text-azul-bold text-center text-2xl font-je;
+            @apply text-azul-bold text-center text-xl xl:text-2xl font-je;
           }
           a {
-            @apply flex flex-row gap-2 rounded-full bg-white text-azul-dark text-base pt-1.5 pb-1 px-4 transition-colors ease-in-out hover:bg-alpha-30 hover:text-azul-bold font-normal;
+            @apply flex flex-row gap-2 rounded-full bg-white text-azul-dark text-base pt-1.5 pb-1 px-4 lg:flex-nowrap transition-colors ease-in-out hover:bg-alpha-30 hover:text-azul-bold font-normal;
             span {
-              @apply font-normal text-azul-bright2 font-je text-lg;
+              @apply xl:text-lg font-normal text-azul-bright2 font-je text-base;
             }
             i {
-              @apply text-lg text-azul-dark;
+              @apply xl:text-lg text-azul-dark mt-1;
             }
           }
           div {
-            @apply flex flex-col gap-1 items-center justify-center;
+            @apply flex flex-col gap-1 items-center justify-center w-full;
+            a {
+              @apply items-center lg:w-full xl:w-auto flex lg:flex-col xl:flex-row !gap-y-0;
+            }
           }
           div.hri {
-            @apply flex flex-row gap-2 items-center justify-between;
+            @apply flex xl:flex-row gap-2 items-center justify-between;
+            a {
+              @apply !flex-row !w-auto;
+            }
           }
         }
       }
@@ -865,12 +871,12 @@ body {
     div.pa__header_int {
       @apply flex flex-col gap-3;
       div {
-        @apply flex flex-col gap-3;
+        @apply flex md:flex-col gap-3;
         i {
-          @apply flex h-16 w-16 items-center justify-center rounded-full border-azul-bright2 border-2 bg-alpha-10 text-3xl text-azul-bright2;
+          @apply flex h-10 w-10 md:h-16 md:w-16 items-center justify-center rounded-full border-azul-bright2 border md:border-2 bg-alpha-10 text-xl md:text-3xl text-azul-bright2;
         }
         h2 {
-          @apply text-azul-bold text-5xl font-normal font-je leading-tight;
+          @apply md:mt-0 mt-2 text-azul-bold text-3xl md:text-5xl font-normal font-je leading-none md:leading-tight;
         }
       }
       p {
@@ -901,7 +907,7 @@ body {
         @apply flex-row items-start;
       }
       p {
-        @apply ml-20;
+        @apply md:ml-20;
       }
     }
   }
