--- a/src/css/portal.css
+++ b/src/css/portal.css
@@ -826,18 +826,18 @@ body {
         li {
           @apply lg:w-auto w-full flex flex-col items-center justify-center gap-3;
           i.ayu-ico {
-            @apply flex h-20 w-20 md:h-28 md:w-28 items-center justify-center rounded-full border-azul-bright2 border-2 bg-alpha-20 text-3xl md:text-5xl text-azul-bright2;
+            @apply flex h-20 w-20 2xl:h-28 2xl:w-28 items-center justify-center rounded-full border-azul-bright2 border md:border-2 bg-alpha-20 text-3xl 2xl:text-5xl text-azul-bright2;
           }
           p {
-            @apply text-azul-bold text-center text-xl xl:text-2xl font-je;
+            @apply text-azul-bold text-center text-xl 2xl:text-2xl font-je;
           }
           a {
             @apply flex flex-row gap-2 rounded-full bg-white text-azul-dark text-base pt-1.5 pb-1 px-4 lg:flex-nowrap transition-colors ease-in-out hover:bg-alpha-30 hover:text-azul-bold font-normal;
             span {
-              @apply xl:text-lg font-normal text-azul-bright2 font-je text-base;
+              @apply 2xl:text-lg font-normal text-azul-bright2 font-je text-base;
             }
             i {
-              @apply xl:text-lg text-azul-dark mt-1;
+              @apply 2xl:text-lg text-azul-dark mt-1;
             }
           }
           div {
@@ -923,7 +923,7 @@ body {
 
 .pa__option {
   ul {
-    @apply grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-4 w-full;
+    @apply grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 2xl:grid-cols-4 gap-4 w-full;
     .service_link {
       @apply bg-alpha-20 border border-azul-bright2 transition-colors ease-in-out;
       h3 {
@@ -954,7 +954,7 @@ body {
     @apply w-full;
   }
   p {
-    @apply text-sm text-azul-dark font-light leading-none;
+    @apply text-base text-azul-dark leading-tight;
   }
   .as__button {
     @apply mt-auto ml-auto;
@@ -963,10 +963,24 @@ body {
 
 .pa__inter {
   @apply bg-gradient-to-b from-alpha-15 to-alpha-18 pt-4 pb-4;
-  .pa__inter_content {
-    @apply bg-white border border-alpha-15 rounded-3xl px-8 py-8 text-azul-dark transition-colors ease-in-out duration-300;
-    &:focus-within {
-      @apply border-azul-bright2 bg-alpha-10;
+  .as__section_wrapper {
+    @apply flex flex-col gap-4;
+    .as__section_content_full {
+      .pa__inter_footer {
+        @apply px-2 text-slate-600;
+        &.prose {
+          @apply max-w-full;
+          p {
+            @apply my-1 leading-tight;
+          }
+        }
+      }
+    }
+    .pa__inter_content {
+      @apply flex flex-col gap-2 bg-white border border-alpha-15 rounded-3xl px-8 py-8 text-azul-dark transition-colors ease-in-out duration-300;
+      &:focus-within {
+        @apply border-azul-bright2 bg-alpha-10;
+      }
     }
   }
 }
@@ -1004,4 +1018,27 @@ body {
       @apply mt-4 text-base text-azul-norm underline underline-offset-2 hover:text-azul-norm;
     }
   }
+}
+.pa_co_header {
+  @apply flex flex-col gap-4;
+  h3 {
+    @apply text-azul-bold text-2xl font-je;
+  }
+  ul.items {
+    @apply bg-alpha-15 rounded-xl px-6 py-2 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4  md:divide-x divide-solid divide-alpha-30 gap-4;
+    li {
+      @apply flex-1 md:px-3 py-2 flex flex-col gap-1.5;
+      h4 {
+        @apply text-azul-bold text-lg font-je;
+      }
+      P {
+        @apply text-azul-dark text-base leading-tight;
+      }
+    }
+  }
+}
+.pa_co_footer {
+  @apply w-full max-w-full text-azul-dark text-sm;
+}
+.pa_co_content {
 }
