--- a/src/layouts/portal.html
+++ b/src/layouts/portal.html
@@ -72,6 +72,7 @@
     />
     <!-- STYLES -->
     <link href="/assets/css/portal.css" rel="stylesheet" />
+    <link href="/assets/css/forms.css" rel="stylesheet" />
     <!-- SCRIPS -->
     <script
       src="https://kit.fontawesome.com/c43a2a9e8d.js"
