Update link in p_header.html

--- a/src/partials/PORTAL/p_header.html
+++ b/src/partials/PORTAL/p_header.html
@@ -58,7 +58,7 @@
             class="as__nav_links_ppal_link"
             aria-current="page"
             title="INICIO"
-            href="certificados.html"
+            href="/PORTAL/pqrs_1_crear.html"
             >Solicitudes y PQRS</a
           >
         </li>
