--- a/src/css/portal.css
+++ b/src/css/portal.css
@@ -971,7 +971,7 @@ body {
         &.prose {
           @apply max-w-full;
           p {
-            @apply my-1 leading-tight;
+            @apply mt-1 leading-tight mb-2;
           }
         }
       }
@@ -1025,7 +1025,7 @@ body {
     @apply text-azul-bold text-2xl font-je;
   }
   ul.items {
-    @apply bg-alpha-15 rounded-xl px-6 py-2 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4  md:divide-x divide-solid divide-alpha-30 gap-4;
+    @apply bg-alpha-10 rounded-xl px-6 py-2 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4  md:divide-x divide-solid divide-alpha-30 gap-4 border border-alpha-15;
     li {
       @apply flex-1 md:px-3 py-2 flex flex-col gap-1.5;
       h4 {
