Fix formatting in banners.html

--- a/src/partials/home/banners.html
+++ b/src/partials/home/banners.html
@@ -4,20 +4,22 @@
       <div class="banner banner_1 active">
         <div class="as__banner_content">
           <h1>
-            <span class="ban_anim1">Colilla de pago y<br><span style="color:#2752b0">certificado de pensión</span> </span>
-            
+            <span class="ban_anim1"
+              >Colilla de pago y<br /><span style="color: #2752b0"
+                >certificado de pensión</span
+              >
+            </span>
           </h1>
           <div>
             <p class="ban_anim1">
               ¿Necesitas solicitar tu colilla de pago o certificado de pensión?
-
             </p>
             <p class="dest ban_anim1">
-              <b>Lusa, nuestra asistente virtual, está lista para ayudarte.</b> Escríbele a través del chat que encuentras en nuestro sitio web y autogestiona esta y otras solicitudes de tu interés.
-            
+              <b>Lusa, nuestra asistente virtual, está lista para ayudarte.</b>
+              Escríbele a través del chat que encuentras en nuestro sitio web y
+              autogestiona esta y otras solicitudes de tu interés.
             </p>
             <p><b>¡Es muy fácil y rápido!</b></p>
-          
           </div>
         </div>
         <div class="as__banner_images">
@@ -26,33 +28,7 @@
         </div>
         <div class="as__banner_piso"></div>
       </div>
-      <div class="banner banner_1">
-        <div class="as__banner_content">
-          <h1>
-            <span class="ban_anim1">Incremento mesada</span>
-            <b class="ban_anim1">pensional 2024 </b>
-          </h1>
-          <div>
-            <p class="ban_anim1">
-              Si tu mesada pensional para el 2023 era de $1.160.000 pesos, para
-              el 2024 será de $XXX pesos
-            </p>
-            <p class="dest ban_anim1">
-              ¡Permanece actualizado de estas novedades en nuestros canales
-              digitales!
-            </p>
-            <!-- <a href="/mesada_pensional" class="as__button ban_anim1">
-              <span>Ingresa aquí y entérate </span>
-              <i role="presentation" class="fa-light fa-arrow-right"></i>
-            </a> -->
-          </div>
-        </div>
-        <div class="as__banner_images">
-          <img src="/assets/images/banner_1_bg.webp" alt="Asulado" />
-          <img src="/assets/images/banner_1_foto.webp" alt="Asulado" />
-        </div>
-        <div class="as__banner_piso"></div>
-      </div>
+
       <div class="banner banner_0">
         <div class="as__banner_content">
           <h1>
@@ -369,7 +345,6 @@
           </div>
         </div>
       </div>
-      
     </div>
     <div class="as__banner_elements">
       <svg
