--- a/src/css/portal.css
+++ b/src/css/portal.css
@@ -792,9 +792,9 @@ body {
   ul.servicios_articulos_item {
     @apply grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 w-full;
     .service_link {
-      @apply flex flex-col gap-2.5 rounded-3xl bg-gradient-to-b from-[#FFFFFF] via-[#FAFDFE] via-20% to-[#FAFDFE] text-azul-dark py-4 px-3 border border-[#E3F2F8];
+      @apply flex flex-col gap-2.5 rounded-3xl bg-gradient-to-b from-white via-[#FAFDFE] via-20% to-[#FAFDFE] text-azul-dark py-4 px-3 border border-[#E3F2F8] min-h-28;
       h3 {
-        @apply flex items-center gap-2 font-je text-azul-dark text-lg font-normal leading-tight;
+        @apply flex items-center gap-2 font-je text-azul-dark text-lg font-semibold leading-tight;
         i {
           @apply flex h-8 w-8 items-center justify-center rounded-full bg-alpha-20 text-xl text-azul-bright2;
         }
@@ -923,9 +923,9 @@ body {
 
 .pa__option {
   ul {
-    @apply grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 2xl:grid-cols-4 gap-4 w-full;
+    @apply w-full flex flex-wrap gap-4 items-stretch justify-center;
     .service_link {
-      @apply bg-alpha-20 border border-azul-bright2 transition-colors ease-in-out;
+      @apply w-full md:w-1/3 xl:w-1/4 2xl:w-1/5 bg-alpha-20 border border-azul-bright2 transition-colors ease-in-out min-h-32;
       h3 {
         @apply bg-transparent;
       }
@@ -945,7 +945,7 @@ body {
 .service_link {
   @apply flex flex-col gap-2.5 rounded-3xl bg-gradient-to-b from-alpha-19    via-transparent via-20% to-transparent text-azul-dark p-3 border border-[#E3F2F8];
   h3 {
-    @apply flex items-center gap-2 font-je text-azul-dark text-lg font-normal leading-tight;
+    @apply flex items-center gap-2 font-je text-azul-dark text-lg font-semibold leading-tight;
     i {
       @apply flex h-8 w-8 items-center justify-center rounded-full bg-alpha-20 text-xl text-azul-bright2;
     }
@@ -971,7 +971,7 @@ body {
         &.prose {
           @apply max-w-full;
           p {
-            @apply mt-1 leading-tight mb-2;
+            @apply mt-1 leading-tight mb-2 italic;
           }
         }
       }
@@ -1027,7 +1027,7 @@ body {
   ul.items {
     @apply bg-alpha-10 rounded-xl px-6 py-2 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4  md:divide-x divide-solid divide-alpha-30 gap-4 border border-alpha-15;
     li {
-      @apply flex-1 md:px-3 py-2 flex flex-col gap-1.5;
+      @apply flex-1 md:px-3 py-2 flex flex-col gap-1.5 transition-colors ease-in-out hover:bg-alpha-20 rounded-lg;
       h4 {
         @apply text-azul-bold text-lg font-je;
       }
