--- a/src/css/portal.css
+++ b/src/css/portal.css
@@ -935,7 +935,8 @@ body {
   ul {
     @apply w-full flex flex-wrap gap-4 items-stretch justify-center;
     .service_link {
-      @apply w-full md:w-1/3 xl:w-1/4 2xl:w-1/5 bg-alpha-20 border border-azul-bright2 transition-colors ease-in-out min-h-32;
+      /* md:max-w-[50%] lg:max-w-[calc(33%-12px)] xl:max-w-[calc(25%-12px)] */
+      @apply flex-1 flex-shrink-0 w-full min-w-80  bg-alpha-20 border border-azul-bright2 transition-colors ease-in-out min-h-32;
       h3 {
         @apply bg-transparent;
       }
