--- a/src/partials/PORTAL/p_header.html
+++ b/src/partials/PORTAL/p_header.html
@@ -74,7 +74,7 @@
       </ul>
     </div>
     <div class="as__nav_wrap h_tools">
-      <div class="as__nav_search">
+      <div id="nav_search" class="as__nav_search">
         <i class="as__nav_search_ico fa-solid fa-magnifying-glass"></i>
         <form action="">
           <input type="text" placeholder="Buscar" />
