--- a/src/partials/PORTAL/p_header.html
+++ b/src/partials/PORTAL/p_header.html
@@ -59,7 +59,7 @@
             aria-current="page"
             title="INICIO"
             href="/PORTAL/pqrs_1_crear.html"
-            >Solicitudes y PQRS</a
+            >Solicitudes y PQR</a
           >
         </li>
         <li class="as__nav_links_ppal_li">
