--- a/src/partials/PORTAL/p_link_servicio.html
+++ b/src/partials/PORTAL/p_link_servicio.html
@@ -1,7 +1,7 @@
 <li class="service_link {{cls}}">
   <h3><i class="fa-light fa-{{ico}}"></i> {{title}}</h3>
   <p>{{content}}</p>
-  <a href="#" class="as__button small">
+  <a href="{{link}}" class="as__button small">
     <span>IR</span>
     <i role="presentation" class="fa-light fa-arrow-right"></i>
   </a>
