--- a/src/partials/PORTAL/p_header.html
+++ b/src/partials/PORTAL/p_header.html
@@ -31,7 +31,8 @@
             class="as__nav_links_ppal_link"
             aria-current="page"
             title="INICIO"
-            href="certificados.html"
+            href="/PORTAL/#certificados"
+            data-tab="0"
             >Certificados</a
           >
         </li>
@@ -40,7 +41,8 @@
             class="as__nav_links_ppal_link"
             aria-current="page"
             title="INICIO"
-            href="certificados.html"
+            href="/PORTAL/#actualizacion"
+            data-tab="1"
             >Actualización de datos</a
           >
         </li>
@@ -49,7 +51,8 @@
             class="as__nav_links_ppal_link"
             aria-current="page"
             title="INICIO"
-            href="certificados.html"
+            href="/PORTAL/#novedades"
+            data-tab="2"
             >Novedades</a
           >
         </li>
