--- a/src/partials/PORTAL/p_header.html
+++ b/src/partials/PORTAL/p_header.html
@@ -26,7 +26,7 @@
         <i class="i-close fa-solid fa-times text-xl"></i>
       </button>
       <ul id="as__nav_links" class="as__nav_links">
-        <li class="as__nav_links_ppal_li dropdown dropdown-hover">
+        <li class="as__nav_links_ppal_li lg:dropdown dropdown-hover">
           <a
             class="as__nav_links_ppal_link"
             aria-current="page"
@@ -54,7 +54,7 @@
             </li>
           </ul>
         </li>
-        <li class="as__nav_links_ppal_li dropdown dropdown-hover">
+        <li class="as__nav_links_ppal_li lg:dropdown dropdown-hover">
           <a
             class="as__nav_links_ppal_link"
             aria-current="page"
@@ -70,7 +70,7 @@
             <li><a href="#">Actualización de datos de contacto</a></li>
           </ul>
         </li>
-        <li class="as__nav_links_ppal_li dropdown dropdown-hover">
+        <li class="as__nav_links_ppal_li lg:dropdown dropdown-hover">
           <a
             class="as__nav_links_ppal_link"
             aria-current="page"
@@ -91,7 +91,7 @@
             <li><a href="#">Novedades Pensión Voluntaria</a></li>
           </ul>
         </li>
-        <li class="as__nav_links_ppal_li dropdown dropdown-hover">
+        <li class="as__nav_links_ppal_li lg:dropdown dropdown-hover">
           <a
             class="as__nav_links_ppal_link"
             aria-current="page"
@@ -144,7 +144,9 @@
           ></a>
         </div> -->
 
-        <div class="as__nav_item dropdown dropdown-end">
+        <div
+          class="as__nav_item dropdown dropdown-end"
+        >
           <img
             class="avat"
             src="http://i.pravatar.cc/300"
