--- a/src/partials/PORTAL/p_header.html
+++ b/src/partials/PORTAL/p_header.html
@@ -59,26 +59,6 @@
             class="as__nav_links_ppal_link"
             aria-current="page"
             title="INICIO"
-            href="/PORTAL/#actualizacion"
-            data-tab="1"
-            tabindex="0"
-            role="button"
-            >Actualización de datos</a
-          >
-          <ul tabindex="0" class="dropdown-content">
-            <li><a href="#">Actualización de documentos de identidad</a></li>
-            <li>
-              <a href="/PORTAL/3_actualizacion_contacto.html"
-                >Actualización de datos de contacto</a
-              >
-            </li>
-          </ul>
-        </li>
-        <li class="as__nav_links_ppal_li lg:dropdown dropdown-hover">
-          <a
-            class="as__nav_links_ppal_link"
-            aria-current="page"
-            title="INICIO"
             href="/PORTAL/#novedades"
             data-tab="2"
             tabindex="0"
@@ -100,14 +80,31 @@
             class="as__nav_links_ppal_link"
             aria-current="page"
             title="INICIO"
+            href="/PORTAL/pqrs_1_crear.html"
+            role="button"
+            >Solicitudes</a
+          >
+          <!-- <ul tabindex="0" class="dropdown-content">
+            <li><a href="#">Crear PQRS</a></li>
+          </ul> -->
+        </li>
+        <li class="as__nav_links_ppal_li lg:dropdown dropdown-hover">
+          <a
+            class="as__nav_links_ppal_link"
+            aria-current="page"
+            title="INICIO"
             href="/PORTAL/#seguimiento"
             data-tab="3"
             tabindex="0"
             role="button"
-            >Solicitudes y PQR</a
+            >Seguimiento a solicitudes</a
           >
           <ul tabindex="0" class="dropdown-content">
-            <li><a href="#"> Consultas PQRS</a></li>
+            <li>
+              <a href="/PORTAL/pqrs_2_consultar.html">
+                Consultar una solicitud</a
+              >
+            </li>
             <li><a href="#"> Consulta novedades</a></li>
           </ul>
         </li>
@@ -148,7 +145,7 @@
           ></a>
         </div> -->
 
-        <div class="as__nav_item dropdown dropdown-end">
+        <div class="as__nav_item dropdown dropdown-end flex-1">
           <img
             class="avat"
             src="http://i.pravatar.cc/300"
@@ -158,13 +155,9 @@
           />
           <ul class="dropdown-content" tabindex="0">
             <li>
-              <a href="#">
-                Actualización de documentos de identidad
-                <i class="fa-solid fa-user-gear"></i
-              ></a>
               <a href="/PORTAL/3_actualizacion_contacto.html">
-                Actualización de datos de contacto
-                <i class="fa-solid fa-user-pen"></i
+                Actualización de datos
+                <i class="fa-solid fa-user-gear"></i
               ></a>
             </li>
             <li>
